Fix version error when building with an old meson version
Addition of list and string is allowed but only from version 0.60 of
meson. We claim to support building with meson 0.47, and there are
distributions like Debian and CentOS Stream 8 that uses versions older
than 0.60. Fix it by converting the offending string to a single item
list.

On newer versions, we get this warning only:
  Project targets '>= 0.47.2' but uses feature introduced in
  '0.60.0': list.<plus>. The right hand operand was not a list.

Fixes: 984642e33f3d ('build: meson: fix some missing dependencies')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1737

--- a/man/meson.build
+++ b/man/meson.build
@@ -118,7 +118,7 @@ if enable_introspection
       output,
       input: [template, man[2]],
       output: output,
-      command: xsltproc_options + '@INPUT@',
+      command: xsltproc_options + ['@INPUT@'],
     )
     content_files += input.full_path()
 
