gitignore: ignore nm-settings-docs-gir-*.xml
The old src/libnm-client-impl/nm-settings-docs-gir.xml has been splitted
into different files specific for nmcli, keyfile, ifcfg-rh and dbus.
Ignore these files that are autogenerated.

We don't expect to add more variants, but better to use a wilcard to
cover this possibility. Also for the nm-property-infos-*.xml files.

Fixes: f4fbc59a1623 ('man nm-setting-*: proper format for gtkdoc constants')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1748

--- a/.gitignore
+++ b/.gitignore
@@ -155,11 +155,8 @@ test-*.trs
 /src/libnm-glib-aux/tests/test-shared-general
 /src/libnm-platform/tests/test-nm-platform
 
-/src/libnm-client-impl/nm-property-infos-dbus.xml
-/src/libnm-client-impl/nm-property-infos-ifcfg-rh.xml
-/src/libnm-client-impl/nm-property-infos-keyfile.xml
-/src/libnm-client-impl/nm-property-infos-nmcli.xml
-/src/libnm-client-impl/nm-settings-docs-gir.xml
+/src/libnm-client-impl/nm-property-infos-*.xml
+/src/libnm-client-impl/nm-settings-docs-gir-*.xml
 /src/libnm-client-impl/tests/test-libnm
 /src/libnm-client-impl/tests/test-nm-client
 /src/libnm-client-impl/tests/test-remote-settings-client
@@ -441,6 +438,7 @@ test-*.trs
 /src/initrd/tests/test-cmdline-reader
 /src/initrd/tests/test-dt-reader
 /src/initrd/tests/test-ibft-reader
+/src/libnm-client-impl/nm-settings-docs-gir.xml
 /src/ndisc/tests/test-ndisc-fake
 /src/ndisc/tests/test-ndisc-linux
 /src/nm-daemon-helper/nm-daemon-helper
