--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1040,6 +1040,18 @@
         <property name="ring-tx"
                   format="integer"
                   values="0 - 4294967295" />
+        <property name="channels-rx"
+                  format="integer"
+                  values="0 - 4294967295" />
+        <property name="channels-tx"
+                  format="integer"
+                  values="0 - 4294967295" />
+        <property name="channels-other"
+                  format="integer"
+                  values="0 - 4294967295" />
+        <property name="channels-combined"
+                  format="integer"
+                  values="0 - 4294967295" />
     </setting>
     <setting name="generic" >
     </setting>
