dispatcher: show man page in .service file
We have a nice man page so let's advertise it a bit by hooking it up in
NetworkManager-dispatcher.service.

--- a/data/NetworkManager-dispatcher.service.in
+++ b/data/NetworkManager-dispatcher.service.in
@@ -1,5 +1,6 @@
 [Unit]
 Description=Network Manager Script Dispatcher Service
+Documentation=man:NetworkManager-dispatcher.service(8)
 
 [Service]
 Type=dbus
