build: assume we have at least systemd v200
systemd v200 was released over 10 years ago.
It is thus reasonable to no longer support versions older than that and
simplify the build system a bit.

--- a/data/meson.build
+++ b/data/meson.build
@@ -12,13 +12,8 @@ if install_systemdunitdir
     'NetworkManager-dispatcher.service.in',
     'NetworkManager.service.in',
     'nm-priv-helper.service.in',
+    'NetworkManager-wait-online.service.in',
   ]
-
-  if have_systemd_200
-    services += ['NetworkManager-wait-online.service.in']
-  else
-    services += ['NetworkManager-wait-online-systemd-pre200.service.in']
-  endif
 
   foreach service: services
     configure_file(
