--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1028,7 +1028,7 @@
                   nmcli-description="Whether TX pause should be enabled. Only valid when automatic negotiation is disabled"
                   format="ternary"
                   values="on, off, ignore" />
-        <property name="eee"
+        <property name="eee-enabled"
                   format="ternary"
                   values="on, off, ignore" />
         <property name="ring-rx"
