nm-in-container: fix mount command in "_nm-in-container-setup.sh"
On Fedora 39, mount now requires the dummy device argument.
It was wrong to omit it, altough it worked previously.

Fix the mount command line.

--- a/tools/nm-guest-data/bin-_nm-in-container-setup.sh.in
+++ b/tools/nm-guest-data/bin-_nm-in-container-setup.sh.in
@@ -9,5 +9,5 @@ if [ ! -d /tmp/sys2 ]; then
     # Let's do this setup step once, and never clean it up.
     # https://github.com/containers/podman/issues/11887#issuecomment-938706628
     mkdir /tmp/sys2
-    mount -t sysfs --make-private /tmp/sys2
+    mount -t sysfs --make-private sysfs /tmp/sys2
 fi
