nm-in-container: set TERM=xterm in bashrc
Otherwise, TERM is set to "dump", which breaks a lot of uses of the
pager.

--- a/tools/nm-guest-data/etc-bashrc.my.in
+++ b/tools/nm-guest-data/etc-bashrc.my.in
@@ -11,6 +11,8 @@ unset DEBUGINFOD_URLS
 
 export NMCI_DEBUG=1
 
+export TERM=xterm
+
 Clean() {
     systemctl stop NetworkManager
     rm -i -rf /run/NetworkManager
