build/meson: fix gtkdoc dependencies
This commit fixes the build process for the documentation that was previously
unable to build separately via meson due to a dependency issue.

Previously, trying to build the API documentation via `ninja NetworkManager-doc`
failed due to missing dependencies (for example, `nm-dbus-types.xml` was not built).
I believe this happens due to some different handling of static paths vs. custom_target
by meson in this case.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1801
Fixes: 03637ad8b5d2 ('build: add initial support for meson build system')
(cherry picked from commit ffb34d248565c4682f29eedb414826add1970dfe)

--- a/man/meson.build
+++ b/man/meson.build
@@ -119,7 +119,7 @@ if enable_introspection
       output: output,
       command: xsltproc_options + [join_paths(meson.current_source_dir(), man[0] + '.xsl'), '@INPUT@'],
     )
-    content_files += input.full_path()
+    content_files += input
 
     output = '@0@.@1@'.format(man[0], man[1])
 
