ip: support dhcp-send-release in NMSettingIpConfig
Introduce a new option to NMSettingIpConfig. The new option is ternary
type being the default value set to disabled. When enabled,
NetworkManager will instruct the DHCP client to send RELEASE message
when IP addresses are being removed.

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1600,6 +1600,10 @@
                   dbus-type="b"
                   gprop-type="gboolean"
                   />
+        <property name="dhcp-send-release"
+                  dbus-type="i"
+                  gprop-type="NMTernary"
+                  />
         <property name="dhcp-timeout"
                   dbus-type="i"
                   gprop-type="gint"
@@ -1738,6 +1742,10 @@
         <property name="dhcp-send-hostname"
                   dbus-type="b"
                   gprop-type="gboolean"
+                  />
+        <property name="dhcp-send-release"
+                  dbus-type="i"
+                  gprop-type="NMTernary"
                   />
         <property name="dhcp-timeout"
                   dbus-type="i"
