test: skip ipv4ll tests when eBPF is enabled and not functional
When building with eBPF support enabled in n-acd, it is possible that
unprivileged access to eBFP calls is disabled by the distro. If so,
skip ipv4ll tests.

--- a/configure.ac
+++ b/configure.ac
@@ -571,6 +571,11 @@ fi
 if test "$with_ebpf" = "yes" -a "$have_ebpf" = "no"; then
 	AC_MSG_ERROR([--with-ebpf=yes requires eBPF kernel header])
 fi
+if test "$with_ebpf" = "yes"; then
+	AC_DEFINE(WITH_EBPF, 1, [Define to 1 if you are building with eBPF support])
+else
+	AC_DEFINE(WITH_EBPF, 0, [Define to 1 if you are building with eBPF support])
+fi
 AM_CONDITIONAL(WITH_EBPF, test "${have_ebpf}" = "yes")
 
 # SELinux support
